bog app project

--- a/app/views/bogs/edit.html.erb
+++ b/app/views/bogs/edit.html.erb
@@ -1,14 +1,25 @@
+<head>
+<link href="/stylesheets/style2.css" media="screen" rel="stylesheet" type="text/css" />
+</head>
+
 <form action="/bogs/<%= @creature.id %>" method="post">
     <input name="_method" type="hidden" value="put" />
     <input type="text" name="creature[name]" value="<%= @creature.name %>">
     <textarea name="creature[description]" value="<%= @creature.description %>"></textarea>
     <%= token_tag form_authenticity_token %>
+    <br>
     <button> Update Creature </button>
 
 </form>
 
 
+<br>
+<br>
+<br>
+
 <form action="/bogs/<%=@creature.id %>/delete" method="get">
 <%= token_tag form_authenticity_token %>
-<button> Delete </button>
+<button id="delete"> Delete </button>
 </form>
+
+
