--- a/app/views/bogs/show.html.erb
+++ b/app/views/bogs/show.html.erb
@@ -1,5 +1,17 @@
+   	<strong>Create has been added</strong>
+
+
+   	<br>
+   	<br>
+
+
     <div>
         Name: <%= @creature.name %> <br>
         Description: <%= @creature.description %>
-        <a href = "/bogs">Home </a>
+        <br>
+        <br>
+        <a href = "/bogs"> <button> Menu page </button>	</a> 
     </div>
+
+
+ 
