--- a/app/views/bogs/new.html.erb
+++ b/app/views/bogs/new.html.erb
@@ -1,6 +1,7 @@
 <form action="/bogs" method="post">
-	Name<input type="text" name="creature[name]">
-  Description <textarea name="creature[description]"></textarea>
+	<pre>Name<input type="text" name="creature[name]"></pre>
+	<pre>Description<input type="text" name="creature[description]"></pre>
+    
     <%= token_tag form_authenticity_token %>
     <button> Save Creature </button>
 </form>
