--- a/app/views/bogs/edit.html.erb
+++ b/app/views/bogs/edit.html.erb
@@ -8,7 +8,7 @@
     <textarea name="creature[description]" value="<%= @creature.description %>"></textarea>
     <%= token_tag form_authenticity_token %>
     <br>
-    <button> Update Creature </button>
+    <button id="update"> Update Creature </button>
 
 </form>
 
